<resources>
    <string name="app_name">Trabalho0320181</string>
    <string name="oficina">Oficina</string>
    <string name="mec_nico">Mecânico</string>
    <string name="entrar">Entrar</string>
    <string name="msgmain">Escolha o que Visualizar</string>
    <string name="txtnome">Nome:</string>
    <string name="txtrua">Rua:</string>
    <string name="rua_aleatoria">Rua Aleatória</string>
    <string name="nome_aleatorio">Nome Aleatório</string>
    <string name="funcao">Função</string>
    <string name="funcao_aleatoria">Função Aleatória</string>
    <string name="oficinas_disponiveis">Oficinas Disponíveis</string>
    <string name="mecanicos">Mecânicos</string>
    <string name="atualizar">Atualizar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar">EDITAR</string>
    <string name="excluir">Excluir</string>
    <string name="nome">Nome</string>
    <string name="fun_o">Função</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="rua">Rua</string>
    <string name="bairro">Bairro</string>
    <string name="municipio">Município</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="salvar">Salvar</string>
</resources>
