<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme" />

    <RelativeLayout
        android:id="@+id/rl_EditarConteudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <Switch
            android:id="@+id/switchHabilitarEdicaoMecanico"
            android:layout_width="120dp"
            android:layout_height="57dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:checked="false"
            android:splitTrack="false"
            android:text="@string/editar"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:checked="false" />

        <TextView
            android:id="@+id/excluirMecanico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:background="#f00"
            android:padding="5dp"
            android:text="@string/excluir"
            android:textColor="#fff"
            android:textSize="18sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollViewMecanico"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_EditarConteudo">

        <LinearLayout
            android:id="@+id/linearMecanico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtTextInfoNomeMecanico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_EditarConteudo" />

            <EditText
                android:id="@+id/edtTextInfoFuncaoMecanico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/funcao"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextInfoDataNascimentoMecanico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/data_de_nascimento"
                android:inputType="date"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edtTextInfoRuaMecanico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/rua"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edtTextinfoBairroMecanico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/bairro"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edtTextInfoMunicipioMecanico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/municipio"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edtTextInfoLatitudeMecanico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/latitude"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edtTextInfoLongitudeMecanico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/longitude"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <include
                layout="@layout/map"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <Button
                android:id="@+id/buttonSalvarMecanico"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:padding="20dp"
                android:text="@string/salvar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="503dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>